[package]
name = "treesitter-demo"
version = "0.1.0"
authors = ["Cherry <ilovecherries@protonmail.com>"]
edition = "2018"

[[bin]]
name = "treesitter-demo"
path = "src/mane.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.19.3"

[build-dependencies]
cc="*"